# WAIaaS

./: .dockerignore  .env.example  .gitignore  .mcp.json  .prettierignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.ko.md  README.md  SECURITY.md  docker-compose.build.yml  docker-compose.secrets.yml  docker-compose.yml  eslint.config.js  glama.json  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json  turbo.json  vitest.workspace.ts
.github/: PULL_REQUEST_TEMPLATE.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v0.7-MILESTONE-AUDIT.md  v2.0-MILESTONE-AUDIT.md  v2.3-MILESTONE-AUDIT.md  v2.6.1-MILESTONE-AUDIT.md  v27.0-MILESTONE-AUDIT.md  v27.4-MILESTONE-AUDIT.md  v28.3-MILESTONE-AUDIT.md  v28.5-MILESTONE-AUDIT.md  v30.10-MILESTONE-AUDIT.md  v31.11-MILESTONE-AUDIT.md  v32.8-MILESTONE-AUDIT.md  v33.2-MILESTONE-AUDIT.md
agent-uat/: README.md  _index.md  _template.md
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/desktop/src-tauri/binaries/: .gitignore
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  lockfile.rs  main.rs  sidecar.rs  tray.rs  types.rs
docker/: README.md  (+1 more)
python-sdk/: .gitignore  README.md  pyproject.toml
python-sdk/tests/: conftest.py  test_client.py  test_defi.py  test_models.py  test_retry.py
python-sdk/waiaas/: __init__.py  client.py  errors.py  models.py  retry.py
(+3949 files in other folders)
