[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "waiaas"
version = "1.6.0"
description = "Python SDK for WAIaaS (Wallet-as-a-Service for AI Agents)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["waiaas"]
